--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -13,12 +13,12 @@
 
 Target Company:
 1. G/F/Airbnb
-2. Amazon/Oracle/Saleforce to match offer.
+2. Amazon/Oracle/OCI/Saleforce to match offer.
 
 Timeline consideration:
-Green card: Microsoft to submit 485 no later than 3/1. Wait for 180, the earliest date you can jump is 9/1,
-Sign on bonus: Microsoft sign on restriction is 9/24, so the earliest date you can jump is 9/24.
-Performance bonus: Microsoft to give performance bonus 9/1.
+1. Green card: Submit 485 on 2/5. 485 + 180 = 8/5.
+2. Sign on bonus: Microsoft sign on restriction is 9/24, so the earliest date you can jump is 9/24. (20k)
+3. Performance bonus: Microsoft to give performance bonus 9/1. (15k)
 
 
 
@@ -27,6 +27,7 @@ Prepare coding and design.
 
 Feb 2020
 Internal team to practice, focus on design
+2/10 Received 2 offers from internal M.S.
 
 
 
@@ -52,6 +53,7 @@ Dec 2019 - Jan 2020: Finished API design book.
 
 Feb 2020           : Facebook design questions in one acre three points
 
+Mar - April: Groking system interview design + DDIA
 
 
 
@@ -119,5 +121,6 @@ number           rank         score    Finish time     Q1        Q2          Q3
 2/10                           MS 1 round team interview
 2/12                           MS 1 round team interview
 2/15        2
+2/16                2
 </code></pre>
 </body>
