--- a/html/solution/bitwiseOperator.html
+++ b/html/solution/bitwiseOperator.html
@@ -61,7 +61,7 @@ a=-2, a>>>8 00000000 11111111  11111111 11111111
 int count = 0;
 int temp = 1;
 for( int i=0; i&lt;32; i++){
-  if (( temp&n) != 0 ){
+  if (( temp&amp;n) != 0 ){
     count++;
   }
   temp = temp<&lt;1;
@@ -71,15 +71,15 @@ return count;
 
 //右移的解法。
 int count = 0;
-for(int i=0; i<32; i++){
-   if (( n & 1) == 1){
+for(int i=0; i&lt;32; i++){
+   if (( n &amp; 1) == 1){
        count++;
    }
    n = n>>1;
 }
 return count;
 
-1178. Number of Valid Words for Each Puzzle
+8. Number of Valid Words for Each Puzzle
 for（int i=31; i>=0; i--){
   int LastBit1 = (n1>>i)&amp;1;
   int lastBit2 = (n2>>i)&amp;1;
@@ -90,9 +90,7 @@ for（int i=31; i>=0; i--){
 }
 
 
-1178. Number of Valid Words for Each Puzzle
-常用技巧2: 构造数  count =0  count = (1&lt;&lt;i) | count
-
+9.
 无重复字母的字符串用bitmask表示方法
 int bitmask = 0;
 for(char c : s.toCharArray()){
@@ -103,7 +101,8 @@ return bitmaskt
 
 
 
-常用技巧3:  int bitmask = 0;,  bitmask = bitmask^c;
+10:  xor 技巧
+int bitmask = 0;,  bitmask = bitmask^c;
 int bitmask =0;
 for( char c : string){
   bitmask = bitmask^c
@@ -126,7 +125,8 @@ for(char c : s.toCharArray()){
 return bitmask.
 
 
-5. team transfer inteview 2/12
+11. Use bit to represent number to save storage.
+team transfer inteview 2/12
 Round II: 2/12: Rushi
 You have a file that has a lot of numbers ranging from [0, 32000], assuming there is no duplicate, you have an interface to read from file int getNumber(), and another interface to write the number to a file. Can you write the numbers to file in sorted order?
 
@@ -197,7 +197,7 @@ Step3:   Do bitwise operator '|' with original value and then assign it to origi
  temp = temp<&lt;offset;
    n = temp | n
 
-对bit赋值的题目：
+对bit赋1的题目：
 <li><a href="https://leetcode.com/problems/convert-binary-number-in-a-linked-list-to-integer/">onvert-binary-number-in-a-linked-list-to-integer</a>  </li>
 
 
@@ -209,7 +209,7 @@ Step2: for loop    if ( ( temp & n) != 0)
 Step3: temp = temp<&lt;1;
 
 int temp =1;
-for( int i=0; i&lt;8; i++){
+for( int i=0; i&lt;32; i++){
    if( ( temp &amp; n) != 0){
        // this bit is 1
    }
