--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -62,6 +62,7 @@ Mar - April: Groking system interview design + DDIA
    a. 效率低，debug很吃力。
    b. 深夜刷题晚上睡不着觉，第二天起来一般都是10点以后了。
 2. Do not do the problem where downvote is more than upvote.
+3. 早上看了Design， 白天下午上班继续看Design效率很低，脑子接受不了这么多Design信息量
 
 
 Weekly test
@@ -123,5 +124,9 @@ number           rank         score    Finish time     Q1        Q2          Q3
 2/15        2
 2/16        4
 2/17                2
+2/18                2
+2/19                2
+2/20                4               1hour in the morining, 3 in the afternoon.
+
 </code></pre>
 </body>
