--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -162,10 +162,10 @@
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
 	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治深度理解)</li>
 	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(遍历， 从上往下，由顶至底)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
-  <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历, 从上往下，不需要从顶开始，也不需要到底结束)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
+  <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历, 递归套递归，背诵这种写法)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
+  <li><a style="color:green" ;  href="solution/isSubTree.html">isSubTree ( 点对树 + 树对数 两个分治模板结合</a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
 	<li><a style="color:green" ;  href="solution/subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治模板)</a> <a href="http://www.lintcode.com/en/problem/subtree-with-maximum-average">Q</a>  </li>
   <li><a href="solution/BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(二分树分治)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
-	<li><a style="color:green" ;  href="solution/isSubTree.html">isSubTree ( 点对树 + 树对数 两个分治模板结合</a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
   <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
   <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
   <li><a href="solution/DeleteaNodeinBST.html">Delete a node in BST</a> <a href=https://leetcode.com/problems/delete-node-in-a-bst/description/>Q</a>  </li>
