--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -125,13 +125,8 @@ number           rank         score    Finish time     Q1        Q2          Q3
 2/16        4
 2/17                2
 2/18                2
-<<<<<<< Updated upstream
-2/19                2
-2/20                4               1hour in the morining, 3 in the afternoon.
-
-=======
 2/19                3
-2/20                1          1 DDIA in the morning
->>>>>>> Stashed changes
+2/20                4               1hour in the morining, 3 in the afternoon.
+2/21(F)    3        1               1hr DDIA
 </code></pre>
 </body>
