--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -128,5 +128,8 @@ number           rank         score    Finish time     Q1        Q2          Q3
 2/19                3
 2/20                4               1hour in the morining, 3 in the afternoon.
 2/21(F)    3        1               1hr DDIA
+2/22                1.5             Leetcode
+2/23                2
+2/24                6
 </code></pre>
 </body>
