--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -160,14 +160,12 @@
 <div class="codingSectionName">Binary tree</div>
 <ul>
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
-	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治深度理解+经典题)</li>
-	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(遍历)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
-  <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑），背诵)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
-  <li><a href="solution/isSubTree.html">isSubTree （分治套分治（Or的逻辑)，背诵） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
-  <li><a href="solution/SymmetricBinaryTree.html">symmetric binary tree</a> <a href="http://www.lintcode.com/en/problem/symmetric-binary-tree/">Q</a>  </li>
-  <li><a href="solution/binaryTreeSerilization.html">Binary Tree Serilization</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
-  <li><a href="solution/DeleteaNodeinBST.html">Delete a node in BST</a> <a href=https://leetcode.com/problems/delete-node-in-a-bst/description/>Q</a>  </li>
-  <li><a href="https://leetcode.com/problems/unique-binary-search-trees-ii">Unique Binary Search Trees II(这个recursion非常有意思)</a></li>
+	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治理解+经典题)</li>
+	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(遍历理解)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
+  <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
+  <li><a href="solution/isSubTree.html">isSubTree （分治套分治（Or的逻辑)） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
+  <li><a href="solution/binaryTreeSerilization.html">Serialize/Deserialize binary tree</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
+  <li><a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Serialize/Deserialize N arr tree</a></li>
 </ul>
 
 <div class="codingSectionName"> Linked List</div>
