--- a/html/solution/BinaryTreeDivideAndConquer.html
+++ b/html/solution/BinaryTreeDivideAndConquer.html
@@ -15,8 +15,10 @@
 
 
 <p>  分治模板  </p>
+分治的特征： 有返回值，从下往上走。
+
 分治三部曲：
-1. 分治结束条件
+1. 结束条件
 2. 分（一口气走到二叉树底层）
 3. 治 （往上走加商业逻辑）
 
@@ -44,7 +46,9 @@ int helper(TreeNode root){
 <ol>
 <li><a href="subTreeWithMaxiumAverage.html">sub Tree With Maxium average(分治)</a> <a href=https://leetcode.com/problems/maximum-average-subtree/>Q</a>  </li>
 <li><a href="BinaryTreeMaximumPathSum.html">Binary Tree Maximum PathSum(分治)</a> <a href=https://leetcode.com/problems/binary-tree-maximum-path-sum/description/>Q</a>  </li>
-<li><a href="BinaryTreeLongestConsecutiveSequence.html">Binary tree longest consecutive sequence</a> <a href="http://www.lintcode.com/en/problem/binary-tree-longest-consecutive-sequence/">Q</a>  </li>
+<li><a href="SymmetricBinaryTree.html">symmetric binary tree(分治)</a> <a href=https://leetcode.com/problems/symmetric-tree/>Q</a>  </li>
+<li><a href="BinaryTreeLongestConsecutiveSequence.html">Binary tree longest consecutive sequence(分治或者遍历套遍历)</a> <a href=https://leetcode.com/problems/binary-tree-longest-consecutive-sequence>Q</a>  </li>
+<li><a href="https://leetcode.com/problems/unique-binary-search-trees-ii">Unique Binary Search Trees II(分治:这个recursion非常有意思)</a></li>
 
 
 </ol>
