--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -165,7 +165,8 @@
   <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
   <li><a href="solution/isSubTree.html">isSubTree （分治套分治（Or的逻辑)） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
   <li><a href="solution/binaryTreeSerilization.html">Serialize/Deserialize binary tree</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
-  <li><a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Serialize/Deserialize N arr tree</a></li>
+  <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder traversal to serialize)</a> href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
+
 </ul>
 
 <div class="codingSectionName"> Linked List</div>
@@ -362,7 +363,6 @@
 <ul>
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
-		 <li><a href="interview/projectIntro.txt">快速自我介绍 +　工作经验介绍</a> </li>
 
 
 
