--- a/html/solution/isSubTree.html
+++ b/html/solution/isSubTree.html
@@ -11,44 +11,47 @@
 
 
 <pre><code>
+  /**
+   * Definition for a binary tree node.
+   * public class TreeNode {
+   *     int val;
+   *     TreeNode left;
+   *     TreeNode right;
+   *     TreeNode(int x) { val = x; }
+   * }
+   */
+  class Solution {
 
-class Solution {
-    public boolean isSubtree(TreeNode s, TreeNode t) {                  // 判断是否为子树的模板
+      public boolean isSubtree(TreeNode s, TreeNode t) {
+          if ( s == null ampamp t == null) return true;
+          if ( s == null || t == null) return false;
 
-         if ( s == null) return false;
-         if ( areTheSameTree(s, t)) return true;
+          return helper(s, t);
+      }
 
-         return isSubtree(s.left, t) || isSubtree(s.right, t);
-    }
+      boolean helper(TreeNode t1, TreeNode t2){
+          if ( t1 == null) return false;
 
+          boolean left = helper(t1.left, t2);
+          boolean right = helper(t1.right, t2);
 
-    boolean areTheSameTree(TreeNode t1, TreeNode t2){                  // 判断两颗树是否相同模板
+          return compare(t1, t2) || left || right;
+      }
 
-        if ( t1 == null && t2 == null) return true;
-        if ( t1 == null || t2 == null ) return false;
+      boolean compare(TreeNode t1, TreeNode t2){
+          if ( t1 == null ampamp t2 == null) return true;
+          if ( t1 == null || t2 == null) return false;
 
-        return t1.val == t2.val && areTheSameTree(t1.left, t2.left) && areTheSameTree(t1.right, t2.right);
-    }
+          boolean left = compare(t1.left, t2.left);
+          boolean right = compare(t1.right, t2.right);
 
-
-
-}
+          return t1.val == t2.val ampamp left ampamp right;
+      }
+  }
 
 
 </code></pre>
 
-
-<pre><code>
-是否为子树模版是二分树下找某个点的模版变种
-
-boolean contains(TreeNode root, TreeNode target){
-  if ( root == null) return false;
-  if ( root.val == target.val) return true;
-
-  return contains(root.left, target) || contains(root.right, target);
-}
-
-</code></pre>
 
 
 
