--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -163,9 +163,9 @@
 	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治理解+经典题)</li>
 	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(遍历理解)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
   <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
-  <li><a href="solution/isSubTree.html">isSubTree （分治套分治（Or的逻辑，and逻辑结合)） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
+  <li><a href="solution/isSubTree.html">isSubTree（遍历套分治 分治套分治） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
   <li><a href="solution/binaryTreeSerilization.html">Serialize/Deserialize binary tree</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
-  <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder traversal to serialize)</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
+  <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder 遍历 to serialize)</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
 
 </ul>
 
