--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -131,7 +131,15 @@ number           rank         score    Finish time     Q1        Q2          Q3
 2/22                1.5             Leetcode
 2/23                2
 2/24       1        6
-2/25       1        1.5
+2/25       1        1.5             kushal team dinner
+2/26                                flight back to stl
+2/27(F)              1
+2/28
+2/29                 2
+3/1                  2
+3/2                  2
+3/3                                 flight back to sea
+
 
 </code></pre>
 </body>
