--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -11,13 +11,15 @@
 <pre><code>
 
 
-Target Company:
-1. G/F/Airbnb
-2. Amazon/Oracle/OCI/Saleforce to match offer.
+Seattle:
+1. G/F/Airbnb/Apple/Snapchat
+2. Amazon/Oracle/OCI/Saleforce
+
+
 
 Timeline consideration:
 1. Green card: Submit 485 on 2/5. 485 + 180 = 8/5.
-2. Sign on bonus: Microsoft sign on restriction is 9/24, so the earliest date you can jump is 9/24. (20k)
+2. Sign on bonus: Microsoft sign on restriction is 9/24(20k)
 3. Performance bonus: Microsoft to give performance bonus 9/1. (15k)
 
 
@@ -29,7 +31,8 @@ Feb 2020
 Internal team to practice, focus on design
 2/10 Received 2 offers from internal M.S.
 
-
+March 2020
+Go Through DDIA
 
 
 
@@ -43,6 +46,7 @@ Coding:
 
 1/31   Done facebook green and yellow tag. Skip blue tag for now. Starting Google tag green and yellow
 
+3/6    Done 470
 
 Design:
 1. Book API design, educative design question, github Facebook design.
@@ -72,73 +76,121 @@ number           rank         score    Finish time     Q1        Q2          Q3
           coding    design                                  下午
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
 12/5        2.5     1.5        10:30-11 coding ,      状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
-12/6（F）    2.5      1         9-10:30  coding ,      状态正常, 1hour coding             晚上回去8点开始看API design   8:30-9:30
+12/6        2.5      1         9-10:30  coding ,      状态正常, 1hour coding             晚上回去8点开始看API design   8:30-9:30
 12/7        3.5      2         11:30-1:30 API design.   差          2                   Leetcode contest 1.5
 12/8        2        1         11：30 - 1:30                                                          API 730-8:30
-12/9        3        1               9:30 - 11                 正常       1 design            8:9:30 coding
+           (14.5)    (7)
+
+12/9(M)     3        1               9:30 - 11                 正常       1 design            8:9:30 coding
 12/10       3                  9:30 - 11:30              morale event                    7：30-8:30 coding
 12/11       5.5                9 - 10:30                       2hours coding             9-11
 12/12       1.5      1         9-10:30                                                   8-9 API
-12/13（F）    1                   7-12 value discussion   状态很差 脑子转不了                  1
+12/13       1                   7-12 value discussion   状态很差 脑子转不了                  1
 12/14        3      1.5                                          1.5 design                   3 contest
 12/15        1                  1coding
-12/16       2       1.5         830-1030 coding                                           8-9:30 API frontend
+           (18)     (3.5)
+
+12/16(M)    2       1.5         830-1030 coding                                           8-9:30 API frontend
 12/17       1        1                                1hour system design, 1 coding
 12/18       2.5      2              9:10-10:50                    1-2                             2-4
 12/19        2                                                 1 coding                         1 coding
 12/20        1       1
 12/21                1
 12/22                1
-12/23                2
+            (8.5)   (8.5)
+
+12/23(M)             2
 12/24                2
 12/25                          break
 12/26                          break
 12/27       2        2
 12/28       1        2
-1/13        2        1                                    11 - 1                            7:30-8:30 groking code review.
-1/14        2                 1030-1230 design
+            (3)      (8)
+
+12/29
+12/30
+12/31
+1/1
+1/2
+1/3
+1/4
+
+1/5(M)                       1/5 - 1/12  Hawaii Maui vacation haha!
+1/6
+1/7
+1/8
+1/9
+1/10
+1/11
+1/12
+
+1/13 (M)    2        1
+1/14        2
 1/15        1                                                                                            830-930
 1/16        1        2                                    3-5                                9-10
 1/17                 2                                    2-4
 1/18        7                                             3 of hard
 1/19        7                                             3 of hard
-1/20        7                                             6 of medium
+           (20)      (5)
+
+1/20(M)     7
 1/21
+1/22
+1/23
+1/24
+1/25
+1/26
 
-1/27                 3        drop 485 + informational
+1/27(M)              3        drop 485 + informational
 1/28        3        2
-1/29        5        2          930-1030                     1-3 coding
-1/30       1.5       2           930-1100
+1/29        5        2
+1/30       1.5       2
 1/31                1.5        Informational
-2/1         2       7          11-1 coding               3-5  6:30 - 1100
+2/1         2       7
 2/2         3       2
-2/3                 4
-2/4         2       1          MS 4 rounds full loop interview
+          (14.5)   (19.5)
 
+2/3(M)              4
+2/4         2       1          MS 4 rounds full loop interview, Kushal team
+2/5
+2/6
 2/7                            Jingyi OS homework
 2/8                            Jingyi OS homework
 2/9                 2          Jingyi OS homework
+           (2)     (7)
 
-2/10                           MS 1 round team interview
-2/12                           MS 1 round team interview
+2/10(M)                        MS Azure storage 1 round team interview
+2/11
+2/12                           MS Azure storage 2 round team interview
+2/13
+2/14
 2/15        2
 2/16        4
-2/17                2
+           (6)
+
+2/17(M)             2
 2/18                2
 2/19                3
-2/20                4               1hour in the morining, 3 in the afternoon.
-2/21(F)    3        1               1hr DDIA
-2/22                1.5             Leetcode
+2/20                4
+2/21       3        1
+2/22                1.5
 2/23                2
-2/24       1        6
-2/25       1        1.5             kushal team dinner
-2/26                                flight back to stl
-2/27(F)              1
+           (3)     (15.5)
+
+2/24(M)    1        6
+2/25       1        1.5
+2/26                1
+2/27                                flight back to stl
 2/28
-2/29                 2
-3/1                  2
-3/2                  2
+2/29       2
+3/1        2
+           (6)      (8.5)
+
+3/2(M)     2
 3/3                                 flight back to sea
+3/4                                 move, computer setup, 1/1
+3/5        2          2
+3/6        1          2
 
 
 </code></pre>
