--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -70,8 +70,9 @@ Mar - April: Groking system interview design + DDIA
 
 
 Weekly test
-number           rank         score    Finish time     Q1        Q2          Q3
-174             1912 / 6997   12	     1:32:56	      0:08:39	 0:20:54	 1:07:56  5
+number   Date        rank         score    Finish time     Q1              Q2          Q3           Q4
+174                1912 / 6997     12	     1:32:56	      0:08:39	      0:20:54	    1:07:56(5)
+179      3/7       2497 / 6242	 	 8	     1:31:18	      0:30:14(6)       		      0:56:18(1)
 
           coding    design                                  下午
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
@@ -191,6 +192,13 @@ number           rank         score    Finish time     Q1        Q2          Q3
 3/4                                 move, computer setup, 1/1
 3/5        2          2
 3/6        1          2
+3/7        1.5        1
+3/8
+
+3/9（M）                             new team onboarding
+3/10                                onboarding
+3/11                                onboarding
+3/12                  1
 
 
 </code></pre>
