--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -73,6 +73,8 @@ Weekly test
 number   Date        rank         score    Finish time     Q1              Q2          Q3           Q4
 174                1912 / 6997     12	     1:32:56	      0:08:39	      0:20:54	    1:07:56(5)
 179      3/7       2497 / 6242	 	 8	     1:31:18	      0:30:14(6)       		      0:56:18(1)
+181      3/21      3834 / 6782	 	 3	     0:05:06	      0:05:06
+182      3/28      4767 / 7784	   7	     1:25:50	      0:07:00(1)	  1:10:50(2)
 
           coding    design                                  下午
 12/4        3        2         8-11 coding,           状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
@@ -199,7 +201,24 @@ number   Date        rank         score    Finish time     Q1              Q2   
 3/10                                onboarding
 3/11                                onboarding
 3/12                  1
+3/13                                Flight back to STL
+3/14                  4             Cafe/http
+3/15                  3             http
 
+3/16(M)
+3/17                                onboarding
+3/18                  1.5           http
+3/19
+3/20
+3/21         1.5
+3/22
+
+3/23(M)                1
+3/24                   1
+3/25                   1
+3/26                  1.5          ch5, replication done.
+3/27                   1           batch
+3/28                   1           stream
 
 </code></pre>
 </body>
