--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -164,6 +164,9 @@
 	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(遍历理解)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
   <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
   <li><a href="solution/isSubTree.html">isSubTree（遍历套分治 分治套分治） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
+  <li><a href=https://leetcode.com/problems/unique-binary-search-trees-ii>unique binary search trees(general DFS, return all BST)</a>
+  <li><a href="solution/AllPossibleFullBinaryTrees.html">all possible full binary trees(general DFS, return all BT)</a> <a href=https://leetcode.com/problems/all-possible-full-binary-trees/submissions/>Q</a>
+
   <li><a href="solution/binaryTreeSerilization.html">Serialize/Deserialize binary tree</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-binary-tree/description/>Q</a>  </li>
   <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder 遍历 to serialize)</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
 
