--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -221,6 +221,14 @@ number   Date        rank         score    Finish time     Q1              Q2   
 3/28                   1           stream
 3/29
 
-3/30(M)       1
+3/30(M)      2                  10-1130, 9:930
+3/31         2                  10-11:30  3-330
+4/1
+4/2
+4/3                  1.5        9:40 - 11:10  TCP
+4/4                  2          TCP
+4/5                  3          HTTP
+
+4/6(M)       2       1         Http
 </code></pre>
 </body>
