--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -12,10 +12,21 @@
 
 
 Seattle:
-1. G/F/Airbnb/Apple/Snapchat
-2. Amazon/Oracle/OCI/Saleforce
+1. G/F/Airbnb/Snapchat/Lyft
+2. OCI/Saleforce
 
+F: E4: 160 + 100/y + 70   + 10% = 350     [61, 62] -> E4
+   E5: 200  + 120/y + 100 + 15% = 450
 
+OCI:
+  IC3:  185 + 120k + 25k = 325k      [61,62] -> IC3 Senior MTS
+  IC4:  200 + 170k + 20k = 390k      [63,64] -> IC4 Senior MTS
+
+SaleForce:
+  Senior: 180 + 60 + 50k + 15% bonus = 320k
+
+Snap:
+  L5:   210k + 300k + 50k + 15% = 580k
 
 Timeline consideration:
 1. Green card: Submit 485 on 2/5. 485 + 180 = 8/5.
@@ -48,6 +59,10 @@ Coding:
 
 3/6    Done 470
 
+4/14   Done 491
+
+4/15 对着一亩三分地FB面经的题目刷题
+
 Design:
 1. Book API design, educative design question, github Facebook design.
 2. company oriented:一亩三名地的facebook design question. 对着题目准备
@@ -58,6 +73,8 @@ Dec 2019 - Jan 2020: Finished API design book.
 Feb 2020           : Facebook design questions in one acre three points
 
 Mar - April: Groking system interview design + DDIA
+
+April 4/15: 对着一亩三分地上design的题目刷题
 
 
 
@@ -196,7 +213,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 3/6        1          2
 3/7        1.5        1
 3/8
-
+          （6.5）     （5）
 3/9（M）                             new team onboarding
 3/10                                onboarding
 3/11                                onboarding
@@ -204,7 +221,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 3/13                                Flight back to STL
 3/14                  4             Cafe/http
 3/15                  3             http
-
+                     （8）
 3/16(M)
 3/17                                onboarding
 3/18                  1.5           http
@@ -212,6 +229,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 3/20
 3/21         1.5
 3/22
+             (1.5)    (1.5)
 
 3/23(M)                1
 3/24                   1
@@ -220,6 +238,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
 3/27                   1           batch
 3/28                   1           stream
 3/29
+                      (6.5)
 
 3/30(M)      2                  10-1130, 9:930
 3/31         2                  10-11:30  3-330
@@ -228,7 +247,20 @@ number   Date        rank         score    Finish time     Q1              Q2   
 4/3                  1.5        9:40 - 11:10  TCP
 4/4                  2          TCP
 4/5                  3          HTTP
+            (4)     (6.5)
 
 4/6(M)       2       1         Http
+4/7                  1.5        TCP
+4/8                  1          http
+4/9                  1.5        OS/thread
+4/10                 1          OS/process
+4/11                 2          thread
+4/12                            break
+            (2)      (8)
+
+4/13(M 16weeks count down)
+4/14                 1          thread
+4/15      2                      10 - 11：50
+
 </code></pre>
 </body>
