--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -261,6 +261,10 @@ number   Date        rank         score    Finish time     Q1              Q2   
 4/13(M 16weeks count down)
 4/14                 1          thread
 4/15      2                      10 - 11：50
+4/16                 2           10 - 12：00 rate limiter
+4/17                 2            10 - 12    rate limiter
+4/18                 2
+4/19                            break
 
 </code></pre>
 </body>
