--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -23,7 +23,9 @@ Online Design resources:
 
 
 
-
+<br>
+<br>
+<br>
 
 How to prepare System design:
 1. 一亩三分地讲如何准备： https://www.1point3acres.com/bbs/forum-323-1.html
@@ -32,18 +34,15 @@ How to prepare System design:
    “对每家onsite的公司 -> 在地里翻完最近两年所有onsite面筋aggregate所有design题目 -> 对每个题目找工业界实现的blog -> 阅读每个blog，选中最好的一到两个 -> 读到烂熟，整理出我当面试官的话会问的所有问题不停考自己 -> 白板英文自行mock 3遍 -> over”
 
 Facebook Design Questions:
-<li> <a href="Design_Instangram.html">Design news feed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a><a href="https://www.educative.io/courses/grokking-the-system-design-interview/m2G48X18NDO">G. Answer</a></li>
-<li> <a href="Design_Youtube.html">Design Streaming app: Netflix, Youtube</a> <a href="https://www.educative.io/courses/grokking-the-system-design-interview/xV26VjZ7yMl">G. Answer</a></li>
-<li> <a href="Design_rateLimiter.html">Design API rate limiter</a><a href="https://www.educative.io/courses/grokking-the-system-design-interview/3jYKmrVAPGQ">G. Answer</a></li>
-Design Dropbox
+<li> <a href="Design_Instangram.html">Design news feed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a></li>
+<li> <a href="Design_Youtube.html">Design Streaming app: Netflix, Youtube</a> </li>
+<li> <a href="Design_rateLimiter.html">Design API rate limiter</a></li>
 
-
-
+Todo: Design typeahead
+Design Dropbox(hard)
 Design fast database cache: Memcached/Redis
-
 Design location based application: Uber, Yelp
 Design Chat System: WeChat, What's app
-Design typeahead
 Design Short URL
 
 
